syntax = "proto3";

option optimize_for=SPEED;
option java_package="com.tingyu.venus.netty.protobuf";
option java_outer_classname = "ChatNotice";


message ChatNoticeMessage{

  int64 id = 1; //消息ID
  string fromId = 2; //发送消息的人
  string toId = 3; //接收消息的人
  ContentType contentType = 4; //消息内容类型
  string content=5;

  string groupId=6; //如果不为空，表示群聊天消息
  enum ContentType{
    TEXT = 0; //文字
    IMAGE = 1; //图片
    VOICE = 2; //语音
    VIDEO = 3; //视频
  }

}